--- a/src/app/components/empresas/empresas.component.html
+++ b/src/app/components/empresas/empresas.component.html
@@ -159,7 +159,7 @@
                                     vacúnelos y protéjalos de este virus que incrementa el ausentismo laboral en su
                                     empresa. Un equipo fortalecido, es un equipo imparable.</p>
                                 <!-- Button trigger modal -->
-                                <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                                <button style="margin-top: 26px;" type="button" class="btn btn-danger" data-bs-toggle="modal"
                                     data-bs-target="#exampleModal">
                                     Registrese y ¡Vacunese!
                                 </button>
@@ -242,7 +242,7 @@
                         <img src="assets/img_home/empresas/consultoria-empresarial.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Nómina electrónica</h5>
-                            <p style="padding-bottom:116px" class="card-text">No deje pasar más tiempo, emita la nómina
+                            <p style="padding-bottom: 94px;" class="card-text">No deje pasar más tiempo, emita la nómina
                                 ahora con una plataforma
                                 ágil
                                 y autogestionable. *Aplica T&C</p>
