--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -204,7 +204,7 @@
             <div class="texto-encima"></div>
         </div>
 
-        <div class="col-12 col-lg-4 mt-5 ">
+        <div class="col-12 col-lg-4 mt-5 text-center">
             <h1 class="text-center position-relative">¿POR QUÉ ELEGIR UNIDOS EPS?</h1>
             <br>
             <h5>ELIJE RESPALDO, SERVICIO DE CALIDAD, HUMANO Y OPORTUNO</h5>
