--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -32,7 +32,7 @@
                     <a class="nosotros nav-link ps-3 pe-3 pt-1 pb-1 ms-2" href="#" tabindex="-1"[routerLink]="['/nosotros']" aria-disabled="true">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="empresas nav-link ps-3 pe-3 pt-1 pb-1 ms-2" href="#" tabindex="-1" aria-disabled="true">Empresas</a>
+                    <a class="empresas nav-link ps-3 pe-3 pt-1 pb-1 ms-2" href="#" tabindex="-1" [routerLink]="['/empresas']" aria-disabled="true">Empresas</a>
                 </li>
             </ul>
         </ng-template>
