--- a/src/app/components/empresas/empresas.component.html
+++ b/src/app/components/empresas/empresas.component.html
@@ -337,7 +337,7 @@
                     <p style="padding-bottom:50px" class="card-text">Celebremos juntos el día de a esos hombres
                         maravillosos
                         que nos alegran la vida.</p>
-                    <button class="btn btn-danger" type="submit">Realizar Reserva</button>
+                    <button style="margin-top: 31px;" class="btn btn-danger" type="submit">Realizar Reserva</button>
                 </div>
             </div>
         </div>
