--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,6 +2,7 @@
     <div class="container d-flex">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"   data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
+            <i class="fa-solid fa-bars icononav"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         <ng-template [ngIf]="VerificarIdentidad.length" [ngIfElse]="loading">
@@ -54,10 +55,9 @@
                 <input class="form-control busqueda mt-4 mb-4 " type="search" placeholder="Busqueda" aria-label="Search">
                 <button class="btn buscar ms-2 me-2 mt-4 mb-4 " type="submit"> <b>Buscar</b> </button>
             </form>
-            <div class="iconosnav d-flex ms-1">
                 <i class="localicacion fa-solid fa-location-dot mb-4 mt-4"></i>
                 <i class="telefono ms-2 fa-solid fa-phone mt-4 mb-4"></i>
-            </div>
+
         </div>
     </div>
 
